# onnx-card

./: README.md  pyproject.toml
src/onnx_card/: cli.py  core.py
