[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "onnx-card"
version = "0.1.0"
description = "Terminal operator histogram for ONNX models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Matthieu Marchal" }]

dependencies = [
  "onnx>=1.14",
  "rich>=13",
]

[project.scripts]
onnx-card = "onnx_card.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onnx_card"]
