[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "onnx-card"
version = "0.1.0"
description = "Fast, accurate, terminal-first ONNX model cards — describe what's inside an ONNX model without running it."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Matthieu Marchal" }]

dependencies = [
  "onnx>=1.14",
  "rich>=13",
]

[project.scripts]
onnx-card = "onnx_card.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/onnx_card"]
